workload/services/media-server/resources/lidarr/statefulset-lidarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      serviceAccountName: wait-for-job
      automountServiceAccountToken: false

      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: openebs.io/nodeid
                    operator: In
                    values:
                      - talos-o52-6k4

      restartPolicy: Always

      containers:
        - name: lidarr
          image: ghcr.io/home-operations/lidarr:3.1.1@sha256:0982783dcc1ede8d45458ffc1d0d96607503035d743f6d18f9c2676a765d5dfe
          livenessProbe:
            httpGet:
              path: /
              port: 8686
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8686
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: data-root
            - name: config
              mountPath: /config
              subPath: lidarr
            - name: lidarr-tmp
              mountPath: /tmp
          ports:
            - containerPort: 8686

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: media-server-config
        - name: data
          persistentVolumeClaim:
            claimName: media-server
        - name: lidarr-tmp
          emptyDir: {}
        - name: sa-token
          projected:
            sources:
              - serviceAccountToken:
                  path: token
                  expirationSeconds: 600
              - configMap:
                  name: kube-root-ca.crt
                  items:
                    - key: ca.crt
                      path: ca.crt
              - downwardAPI:
                  items:
                    - path: namespace
                      fieldRef:
                        fieldPath: metadata.namespace
