workload/services/media-server/resources/lidarr/service-lidarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  selector:
    app: lidarr
  ports:
    - name: http
      port: 8686
      targetPort: 8686
